refactor: 전반적인 리팩토링

--- a/success.html
+++ b/success.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css"/>
-    <title>Hangman</title>
+    <title>Success</title>
 </head>
 <body>
 <div class="container">
-    <div class="hangman-img">
-        <img src="img/life_7.png" alt="hangman" class="hangman-image">
-    </div>
-    <div class="word-container"></div>
-    <div class="alphabet-container"></div>
-    <div class="history-container"></div>
+    <p>Success!</p>
 </div>
 <script type="module" src="js/main.js"></script>
 </body>
