--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/basic.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/main.css"/>
     <title>Hangman</title>
 </head>
