feat: 목숨 개수에 따른 이미지 변경 기능 구현

--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="container">
-    <div class="hangman-img">
-        <img src="img/life_7.png" alt="hangman" class="hangman-image">
+    <div class="image-container">
+        <img alt="hangman" class="image" src="img/life_8.png">
     </div>
     <div class="word-container"></div>
     <div class="alphabet-container"></div>
