feat: 실패 페이지에 이미지 추가

--- a/fail.html
+++ b/fail.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 <div class="container">
-    <p>실패</p>
+    <div class="image-container">
+        <img alt="hangman" class="image" src="img/dead.png">
+    </div>
+    fail
+
 </div>
 </body>
 </html>
