feat: 성공 페이지에 이미지 추가

--- a/success.html
+++ b/success.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 <div class="container">
-    <p>성공</p>
+    <div class="image-container">
+        <img alt="hangman" class="image" src="img/alive.png">
+    </div>
+    성공
 </div>
 </body>
 </html>
