refactor: 행맨 게임 메인 페이지 뷰, 컴포넌트 분리

--- a/main.html
+++ b/main.html
@@ -8,14 +8,7 @@
     <title>Hangman</title>
 </head>
 <body>
-<div class="container">
-    <div class="image-container">
-        <img alt="hangman" class="image" src="img/life_8.png">
-    </div>
-    <div class="word-container"></div>
-    <div class="alphabet-container"></div>
-    <div class="history-container"></div>
-</div>
+<div id="root" class="container"></div>
 <script type="module" src="js/main.js"></script>
 </body>
 </html>
