--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <title>Hangman</title>
 </head>
 <body>
-<div class="container">
+<div id="root" class="container">
     <h1>단어를 선택해주세요!</h1>
-    <div class="answer-candidate-container"></div>
 </div>
 <script type="module" src="js/index.js"></script>
 </body>
