--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/basic.css" rel="stylesheet"/>
+    <link href="css/basic.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/index.css"/>
+    <link href="css/main.css" rel="stylesheet"/>
     <title>Hangman</title>
 </head>
 <body>
-<div id="root" class="container">
-    <h1>단어를 선택해주세요!</h1>
-</div>
+<div id="root" class="container"></div>
 <script type="module" src="js/index.js"></script>
 </body>
 </html>
